# cmake-practice

./: .gitignore  CMakeLists.txt  README.md  config.h  main.cc
math/: CMakeLists.txt  MathFunctions.cc  MathFunctions.h
